<resources>
    <string name="key_lock_url">http://down.anall.cn/res/plugin/wp8/Lockscreen.apk</string>
    <string name="app_name">Launcher8 free</string>
    <string name="preference_hit">could you will setting the %s to Launcher preference?</string>
    <string name="preference_hit_title">Set Launcher preference</string>
    <string name="anall">www.anall.cn</string>
    <string name="language">en</string>
    <string name="add_widget">Add</string>
    <string name="choose_wallpaper">WallPapers</string>
    <string name="system_theme">Theme</string>
    <string name="system_settings">Settings</string>
    <string name="edit_theme">Edit</string>
    <string name="about_more">More</string>
    <string name="settings">settings</string>
    <string name="theme_settings">Theme</string>
    <string name="theme_color">Theme color</string>
    <string name="change_theme_color">Change theme color</string>
    <string name="historical_themes">My theme</string>
    <string name="historical_themes_about">Loading saved themes</string>
    <string name="choose_theme">Select theme</string>
    <string name="choose_historical_theme">Select theme</string>
    <string name="time_cell">Time tile</string>
    <string name="lock_cell">OneKey lockScreen</string>
    <string name="menu_cell">Menu tile</string>
    <string name="theme_cell">Theme tile</string>
    <string name="lock_cell_download">"You haven't download the Launcher8 free Lock, download right now?"</string>
    <string name="lock_background">LockScreen wallpaper</string>
    <string name="lock_background_about">Change current LockScreen wallpaper</string>
    <string name="wallpaper_select">Select pic</string>
    <string name="choose_pic">Confirm</string>
    <string name="color_of_lock_text">LockScreen font color</string>
    <string name="change_color_of_lock_text">Change font color</string>
    <string name="lock_theme">LockScreen style</string>
    <string name="system_lock">System</string>
    <string name="wallpaper_theme">Background color</string>
    <string name="white_background">white</string>
    <string name="black_background">Black</string>
    <string name="system_background">System wallpaper</string>
    <string name="show_statusbar_open">System statusbar</string>
    <string name="show_statusbar_close">Hide statusbar</string>
    <string name="is_show_statusbar">Statusbar</string>
    <string name="is_show_lock_statusbar">Show statusbar</string>
    <string name="is_show_lock_sound">Lock sound</string>
    <string name="applist_settings">AppList</string>
    <string name="color_of_applist">AppList font color</string>
    <string name="change_applist_text_color">Change font color of the applist</string>
    <string name="invisible_applist">Apps filter</string>
    <string name="invisible_applist_about">Select hidden apps</string>
    <string name="refresh_applist_about">Refresh the applist</string>
    <string name="refresh_applist">Apps refresh</string>
    <string name="app_not_found">No app found!!!</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_succeed">Refresh success</string>
    <string name="refresh_failed">Refresh fail</string>
    <string name="refreshing">Refreshing...</string>
    <string name="refresh_contacts_about">Get new contact icons</string>
    <string name="group_contacts">Show big contact picture</string>
    <string name="group_contacts_info">Show or not one icon which needs four grid</string>
    <string name="refresh_contacts">Refresh contact icons</string>
    <string name="set_gallerys_about">Select pic to add to the live gallery</string>
    <string name="set_gallerys">Set live gallery picture</string>
    <string name="gallerys_title">Custom Folder</string>
    <string name="gallerys_path" formatted="false">Picture:%s Path:%s</string>
    <string name="gallerys_folder_btn">Select</string>
    <string name="navigation">Index letters</string>
    <string name="show_navigation_open">Enable index letters(open)</string>
    <string name="show_navigation_close">Disable index letters(close)</string>
    <string name="more">More</string>
    <string name="update">Check update</string>
    <string name="feedback">Feedback</string>
    <string name="about">About Us</string>
    <string name="versions">Version</string>
    <string name="latest_version">This is the latest version</string>
    <string name="send_message">Send</string>
    <string name="feedback_about">Thank you for using our application. Please add your E-mail address when you feedback, we will reply you as soon as possible. Hope your suggestions! Thanks!</string>
    <string name="about_text">Visit our BBS</string>
    <string name="more_about_text">Visit our BBS</string>
    <string name="more_about_exit">Exit</string>
    <string name="about_text_one">"Bored of Android's User Interface? Do you like the new Windows Phone 8 Launcher screen? If you do, then wait no more!WP8 Launcher Screen is a great app for you to experience the brand new Modern UI by an Android mobile phone. You can resize into the new small and large tiles, install apps and change theme colour! We provide different sizes, colors and themes for you to choose so you can design your own favourite layout and show off to your friends!"</string>
    <string name="about_text_two"></string>
    <string name="cell_settings">Tile</string>
    <string name="facade_settings">Tile settings</string>
    <string name="title">Title</string>
    <string name="binding_app">Bind application</string>
    <string name="binding_widget">Bind AppWidget</string>
    <string name="binding_app_title">Bind application</string>
    <string name="none">None</string>
    <string name="text_color">The color of the title</string>
    <string name="choose_app">Select app</string>
    <string name="change_text_color">Change color of the title</string>
    <string name="background_color">Tile color</string>
    <string name="change_background_color">Change color of the tile</string>
    <string name="icon">Icon</string>
    <string name="change_icon">Select</string>
    <string name="set_cell_icon">Select tile icon</string>
    <string name="app_icon">Apps icon</string>
    <string name="custom_icon">Custom</string>
    <string name="icon_from_sdcard">Select from SDcard</string>
    <string name="sure">Confirm</string>
    <string name="cell_option">Tile</string>
    <string name="translucent">Translucent</string>
    <string name="blue">Blue</string>
    <string name="magenta">Magenta</string>
    <string name="orange">Orange</string>
    <string name="kelly">Kelly</string>
    <string name="violet">Violet</string>
    <string name="cyan">Cyan</string>
    <string name="brown">Brown</string>
    <string name="pink">Pink</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="icon_and_text">Icon</string>
    <string name="bg_and_text">Pictures</string>
    <string name="preview">Preview</string>
    <string name="choose_pic_from_sdcard">Select</string>
    <string name="add_to_desk">Add tile</string>
    <string name="invisible_app">Hide app</string>
    <string name="uninstall">Uninstall</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cell_size">Tile size</string>
    <string name="cell_type">Select a picture</string>
    <string name="icon_or_bg">Icon or background</string>
    <string name="cell_color">Tile color</string>
    <string name="cell_transparency">Tile transparent</string>
    <string name="click_to_add">Confirm</string>
    <string name="choose">Select</string>
    <string name="delete">Delete</string>
    <string name="cell">Tile</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="boutique">Software</string>
    <string name="not_null">Can not be null</string>
    <string name="less_than_500">At most 500 words</string>
    <string name="thinks_for_suggestion">Thanks for your suggestion</string>
    <string name="submit_failure">Failed</string>
    <string name="historical_help">"Sorry, it seems that you didn't save your theme, so pls save your chosen theme when u r in the theme setting."</string>
    <string name="message">Sms</string>
    <string name="dial">Dial</string>
    <string name="browser">Browser</string>
    <string name="email">Email</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="music">Music</string>
    <string name="map">Map</string>
    <string name="time">Time</string>
    <string name="radio">Clock</string>
    <string name="calculator">Calculator</string>
    <string name="store">Play store</string>
    <string name="contacts">People</string>
    <string name="clock">Clock</string>
    <string name="lock">Lock</string>
    <string name="menu">Menu</string>
    <string name="widget_not_found">No widget been found</string>
    <string name="checking">Checking....</string>
    <string name="install_warning">Warning</string>
    <string name="update_warning">Warning</string>
    <string name="new_versions">New version:</string>
    <string name="update_able">Update?</string>
    <string name="have_done">Download over, install?</string>
    <string name="theme_name">Theme Name</string>
    <string name="save">Save</string>
    <string name="cover">Cover</string>
    <string name="exist_theme">The theme has exist</string>
    <string name="to_cover">Cover the theme?</string>
    <string name="save_success">Succeed</string>
    <string name="icon_from_0">App icon</string>
    <string name="icon_from_1">Custom pic</string>
    <string name="icon_from_2">Pick from phone</string>
    <string name="app">Applications</string>
    <string name="app1">Apps</string>
    <string name="refresh_app">Refresh</string>
    <string name="hidden_application">Hide apps</string>
    <string name="app_list_setting">App settings</string>
    <string name="switch_list">List or grid</string>
    <string name="cell_preview">Tile title</string>
    <string name="app_list_sort">App sort</string>
    <string name="app_list_search">Batch add</string>
    <string name="preview_cell_open">Enable edit the tiles(open)</string>
    <string name="preview_cell_close">Enable edit the tiles(close)</string>
    <string name="lock_launcher">Launcher setting</string>
    <string name="app_icon_color">AppList icon background</string>
    <string name="app_icon_color_choose">Select the application icon background</string>
    <string name="follow_theme_open">Follow the theme colors(on)</string>
    <string name="privacy_mode">Privacy mode</string>
    <string name="privacy_mode_remark">Turn privacy mode will not record your search history</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="open">ON</string>
    <string name="theme_title">Theme</string>
    <string name="theme_menu_down">Download</string>
    <string name="folder">Folder</string>
    <string name="search_text">Search</string>
    <string name="recorder">SoundRecorder</string>
    <string name="calllog">CallLog</string>
    <string name="playstore">Play Store</string>
    <string name="calelender">Calelender</string>
    <string name="flashlight">flashlight</string>
    <string name="FM">FM Radio</string>
    <string name="mtv">Analog TV</string>
    <string name="video">Video Player</string>
    <string name="google_talk">Google Talk</string>
    <string name="file_manage">File Manager</string>
</resources>