<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="13.0sp" android:textColor="#ff707070" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_margin" android:text="@string/privacy_mode" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?textAppearancePrimary" android:gravity="center_vertical" android:id="@id/tv_mode_text" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/open" android:layout_weight="1.0" />
        <com.lx.launcher8.setting.wp8.view.SeekButton android:layout_gravity="center_vertical" android:id="@id/btn_mode_seekbutton" android:paddingLeft="@dimen/special_pad" android:paddingRight="@dimen/special_pad" android:layout_width="@dimen/special_btn_width" android:layout_height="@dimen/special_btn_height" />
    </LinearLayout>
    <TextView android:textSize="13.0sp" android:textColor="#ff707070" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/normal_margin" android:text="@string/privacy_mode_remark" />
    <Button android:textSize="16.0sp" android:id="@id/btn_clear" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_margin" android:text="@string/clear_search_history" />
</LinearLayout>